assets/css/style.css
/* ... */
.card-info .count {
  /* color: #555; */
  color: var(--text-muted);
  font-size: 0.85rem;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-weight: 500;
}

/* 右侧动作图标 */
.card-action {
  position: absolute;
  right: 30px;
  font-size: 18px;
  /* color: #000; */
  color: var(--text-color);
  opacity: 0.2;
  transition: all 0.3s ease;
}

.category-card:hover .card-action {
  opacity: 1;
  transform: translateX(5px);
}

/* 适配移动端 */
@media (max-width: 768px) {
  .category-display-title {
    font-size: 2.5rem;
  }
  .category-card {
    padding: 30px 20px;
  }
}

/*------------------------------------------------------------------
[DARK MODE]
-------------------------------------------------------------------*/
.section, footer.bg-secondary {
  background-color: var(--section-bg) !important;
}

.card {
  background-color: var(--card-bg) !important;
  border-color: var(--border-color) !important;
}

.text-dark, h1, h2, h3, h4, h5, h6, a {
  color: var(--text-color) !important;
}

.navigation {
  background-color: var(--nav-bg) !important;
}

.work-quote {
  background-color: var(--section-bg) !important;
  p {
    color: var(--text-color);
  }
}

.pagination {
  .page-link {
    background-color: var(--section-bg) !important;
  }
}

.form-control {
  background-color: var(--section-bg) !important;
}
/* ------------------------------------------------------------------ */

